[flake8]
max-line-length = 88
ignore = 
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
    # Walrus Operator :=
    E701
    E231
exclude = 
    docs

[metadata]
name = cchdo.params
author = CCHDO
author-email = cchdo@ucsd.edu
home-page = https://github.com/cchdo
license = BSD 3-clause
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown

[options]
python_requires = ~=3.8
zip_safe = False
packages = find_namespace:
setup_requires = setuptools_scm
namespace_packages=
  cchdo
include_package_data=True
install_requires = 
  sqlalchemy>=1.3

[options.extras_require]
dev = 
    click==7.1.2
    pytest==5.4.1
    pytest-cov==2.10.1
    pre-commit==2.9.3
    black==19.10b0
    codecov==2.1.11
    requests-mock==1.8.0
    mypy==0.790
    flake8==3.8.4
    pyflakes==2.2.0
    twine==3.3.0
    jsonschema==3.2.0
    sqlalchemy-stubs>=0.2
    pylint-flask==0.6
docs = 
    Sphinx
    furo
complete = 
    %(dev)s
    %(docs)s

[tool:pytest]
xfail_strict=true

[mypy]
plugins = sqlmypy

[mypy-pytest.*]
ignore_missing_imports = True

# setuptools is not typed
[mypy-setup]
ignore_errors = True
#ignore the docs
[mypy-docs.conf]
ignore_errors = True
