[metadata]
name = cchdo.params
author = CCHDO
author_email = cchdo@ucsd.edu
home_page = https://github.com/cchdo
license = BSD 3-clause
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown

[options]
python_requires = ~=3.9
zip_safe = False
packages = find_namespace:
setup_requires = setuptools_scm
namespace_packages=
  cchdo
include_package_data=True

[options.extras_require]
selftest =
    pytest==7.4.0
    jsonschema==4.19.0
    sqlalchemy>=2.0
dev = 
    %(selftest)s
    click==8.1.7
    pytest-cov==2.12.1
    pre-commit==3.3.3
    black==23.10.0
    codecov==2.1.13
    mypy==1.6.1
    twine==4.0.2
    ruff==0.1.1
docs = 
    Sphinx
    furo
complete = 
    %(dev)s
    %(docs)s

[tool:pytest]
xfail_strict=true
